# Agents-project

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test_api.py
Infrastructure/client/: AuthRepository.py
Infrastructure/db/: BasePostgresRepostiory.py
Interface/: auth_interface.py
agents/code_review_agent/: CodeReviewAgent.py
agents/conversation_agent/: ConversationAgent.py
app/: api.py  dependencies.py
app/Infrastructure/client/: auth_repository.py
app/Interface/: auth_interface.py
app/api/: dependencies.py
app/api/routers/: auth.py  (+3 more)
app/config/: container.py  prompt_config.py  settings.py
app/core/: llm_service.py  prompt_service.py
app/models/: schemas.py  types.py
app/routers/: auth.py  chat.py  conversation.py  review.py
app/services/: auth_service.py  code_review_service.py  conversation_service.py  document_loader_service.py  vectordb_service.py
app/utils/: temp_filename.py
config/: container.py  logging.py  prompt_config.py  settings.py
core/: prompt_service.py
middleware/: auth_middleware.py
models/: schemas.py  types.py
prompts/: README.md  best_practices.yml  chat_config.yml  code_review_config.yml  comment_quality.yml  conversation_config.yml  explanations.yml  performance_analysis.yml  security_scan.yml  style_check.yml  syntax_analysis.yml
services/: auth_service.py  chat_service.py  code_review_service.py  conversation_service.py  document_loader_service.py  llm_service.py  prompt_service.py  vectordb_service.py
utils/: temp_filename.py
vector_store/: index.faiss  index.pkl
(+3 files in other folders)
